--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Josefin Sans', sans-serif;
 }
+.app-wrapper{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  align-items: stretch;
+}
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  height: 100px;
+  background: #fff;
+  padding: 10px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+}
+.title{
+  color: #171717;
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: 900;
+  line-height: 1;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.subtitle{
+  color: #171717;
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: 300;
+  line-height: 1;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.wild-pokemon{
+  min-height: 300px;
+  background: #A70F02;
+  padding: 15px;
+}
+.wild-pokemon h2{
+  color: #fff;
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.wild-pokemon .sprite{
+  display: block;
+  width: 150px;
+  margin: 0px auto;
+}
+.wild-pokemon h3{
+  color: #fff;
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.wild-pokemon .catch-btn{
+  width: 200px;
+  height: 35px;
+  display: block;
+  margin: 25px auto;
+  background: #FFEF01;
+  border: none;
+  outline: none;
+  color: #3160B8;
+  font-weight: 700;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.wild-pokemon .catch-btn:active{
+  background: #f7a800;
+}
+.pokedex{
+  flex: 1;
+  padding: 115px;
+  display: flex;
+  flex-flow: column;
+  overflow: scroll;
+}
+.pokemon-list{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-gap: 15px;
+}
+.pokemon-list .pokemon{
+  position: relative;
+  display: flex;
+  flex-flow: column;
+  min-height: 150px;
+  padding: 15px;
+  background: #f3f3f3;
+}
+
